@@ -1,3 +1,6 @@
+[B]Version 4.1.5[/B]
+    -sports section reshuffle, removed few
+    
 [B]Version 4.1.4[/B]
     -added caching support for faster channel list
 [B]Version 4.1.3[/B]
